Fixed logo title not sizing on small screens

--- a/css/bb-styles.css
+++ b/css/bb-styles.css
@@ -31,8 +31,13 @@ html {
 }
 
 #bbLogo {
-    width: 20%;
-    height: 20%;
+    width: 25%;
+}
+
+@media (max-width: 576px) {
+    #responsive_company {
+        font-size: .80em;
+    }
 }
 
 .tooltip .arrow {
